# rust-learning-system

./: LICENSE  README.md  build.sh  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
resources/content/: lessons.json  microlessons.json  rag-index.db  structure.json
resources/content/html/: appendix-00-00.html  appendix-01-keywords-00.html  appendix-01-keywords-01.html  appendix-01-keywords-02.html  appendix-01-keywords-03.html  appendix-02-operators-00.html  appendix-02-operators-01.html  appendix-02-operators-02.html  appendix-03-derivable-traits-00.html  appendix-03-derivable-traits-01.html  appendix-03-derivable-traits-02.html  appendix-03-derivable-traits-03.html  appendix-03-derivable-traits-04.html  appendix-03-derivable-traits-05.html  appendix-03-derivable-traits-06.html  appendix-04-useful-development-tools-00.html  appendix-04-useful-development-tools-01.html  appendix-04-useful-development-tools-02.html  appendix-04-useful-development-tools-03.html  appendix-04-useful-development-tools-04.html  appendix-05-editions-00.html  appendix-06-translation-00.html  appendix-07-nightly-rust-00.html  appendix-07-nightly-rust-01.html  appendix-07-nightly-rust-02.html  appendix-07-nightly-rust-03.html  appendix-07-nightly-rust-04.html  (+359 more)
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  resources.rs  runner.rs  toolchain.rs
src/js/: app.js  editor.js  exercises.js  lessons.js  progress.js  resize.js  runner.js  sidebar.js  toolchain.js
