[package]
name = "rust-learn"
version = "0.1.0"
description = "Rust Learning System - Learn Rust with interactive exercises"
authors = ["Chester Kim"]
edition = "2021"

[lib]
name = "rust_learn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync"] }
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

